Closes-Bug: #1691936 -- UI-Misalignment of error message in Create DNS Record.
In the create DNS Records Pop up
1) The error message for host name, IP address and Canonical Name are misaligned.
2) Also the place holder text for the host name, IP address are cropping in MAC.

--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -574,3 +574,5 @@ table td[class*="col-xs-"], table th[class*="col-xs-"], .row-fluid table td[clas
 #monitor-alarms-grid .alarms-circle-display-flex{
  display:inline-block;
     }
+#configure-dns_record-form #record_name input[type="text"], #configure-dns_record-form #record_data input[type="text"]{
+width:100%;}
